Corrected non-wrapping text in .badge class/ #608

--- a/srophe-app/resources/css/main.css
+++ b/srophe-app/resources/css/main.css
@@ -20,14 +20,6 @@ body {font-family: arial, sans-serif; background-color:#385978;}
 .interior-content {padding:0; padding-top: 50px;}
 .full-page {margin-top:0;}
 
-/* Simple background color styles */
-.grey {background-color:#eee;}
-.grey-dark {background-color:#ccc;}
-.white {background-color:white;}
-.content-block {background-color:#ffffff !important;}
-.top-padding {margin-top:2em;}
-/*.full-page{border:1px solid blue; padding: 0 15px;}*/
-
 /* Navbar styles*/
 .navbar {border-bottom:4px solid #456889 !important;}
 .navbar-inner {border-bottom:.5em solid #456889 !important;}
@@ -171,6 +163,13 @@ body {font-family: arial, sans-serif; background-color:#385978;}
 /* Footer styles */
 footer {text-align:center; color:white;}
 
+/* Simple background color styles */
+.grey {background-color:#eee;}
+.grey-dark {background-color:#ccc;}
+.white {background-color:white;}
+.content-block {background-color:#ffffff !important;}
+.top-padding {margin-top:2em;}
+
 /* Typography */
 h1 {font-size:1.5em; margin:.25em 0 .25em 0; color:#456889; font-weight:500;}
 h2 {font-size: 1.25em; margin:1em 0 .25em 0; padding-bottom:0; color:#999; font-weight:500;}
@@ -234,11 +233,10 @@ td {
 .caption{text-align:center; font-size:.75em;color:grey;}
 .funding {margin:1em;}
 .no-logo {font-size:1.25em; font-weight:600; font-family:serif; color:#333; margin:1em;}
-
+.badge {white-space: normal;}
 .about-tables td {
     border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    
+    border-bottom: 1px solid #ccc; 
 }
 .well-white {background-color:white;}
 .section {background-color:white; padding:0 1em;}
@@ -282,89 +280,8 @@ td {
 
 .results-list {margin-left: 25px; border-bottom:1px dotted #eee; padding-top:.5em}
 .results-list-desc{display:block;}
-.pers-label {background-color:#999;  font-weight:400; margin-right:4px;}
+.pers-label {background-color:#999; font-weight:400; margin-right:4px;}
 .results-list-desc .pers-label .footnote-refs,.results-list .footnote-refs, .relation .footnote-refs {display:none; visability:hidden;}
-/* Styles for record short view under relation div*/
-.relation .results-list-desc.uri{margin-left:0;}
-
-/* footnote styles */
-.footnote-refs, .footnote-tgt {
-    font-size: .7em;
-    line-height: 0.5em;
-    vertical-align: baseline;
-    position: relative;
-    top: -0.4em;
-
-}
-.footnote-tgt {
-    margin-left:-1.5em;
-    padding-right:.5em;    
-}
-
-.footnote-links {line-hieght: 18px;float:right;}
-.footnote-icon {padding-left:.5em; font-size:18px;}
-
-.bibl li{line-height: 1.5em;padding-bottom:.5em;}
-.bibl-links {padding:.25em; width:25px;}
-.anchor { 
-    position: relative; 
-    top:-75px !important;
-    visibility: hidden; 
-    }
-    
-.anchor:before {
-  content:"";
-  float: left;
-  height: 0px;
-}
-
-.heading-inline {
-	font-weight: bold;
-}
-
-/* styles for names */
-.placeName {
- font-weight: bold;
-}
-/* Subject headings */
-.sh {margin-right:.5em; margin-bottom: .5em; line-height:14px; font-weight:normal;}
-.sh-search {text-decoration:none; color:white; margin-left:.5em;}
-.sh .placeName, .sh .pers-label {font-weight:normal;}
-.sh .footnote-refs{display:none;}
-/* styles for languages and scripts */
-
-:lang(en) {
-	font-family: arial, sans-serif;
-}
-
-:lang(syr),:lang(syc) {
- font-family: "EstrangeloEdessa", "Estrangelo Edessa", Verdana, Arial, Helvetica, sans-serif;
-  /*font-size:large;*/
-  font-size:1.25em; 
-  line-height:1em;
-  
-}
-
-:lang(syr-Syrj), :lang(syc-Syrj) {
- font-family: "SertoBatnan", "Serto Batnan", Verdana, Arial, Helvetica, sans-serif;
-  font-size:1.25em; 
-  line-height:1em;
- 
-}
-
-:lang(syr-Syre), :lang(syc-Syre) {
- font-family: "EastSyriacAdiabene", "East Syriac Adiabene", Verdana, Arial, Helvetica, sans-serif;
- font-size:1.25em; 
- line-height:1em;
-
-}
-
-:lang(ar) {
- font-family: arial, sans-serif;
- font-size:1.25em; 
- line-height:1em;
- 
-}
 
 /* Browse tabs and side menues */  	
 .tab-pane {
@@ -426,6 +343,91 @@ td {
 
 .type-content {padding:1em;}
 .type-nav {width: 85%;}
+
+
+/* Styles for record short view under relation div*/
+.relation .results-list-desc.uri{margin-left:0;}
+
+/* footnote styles */
+.footnote-refs, .footnote-tgt {
+    font-size: .7em;
+    line-height: 0.5em;
+    vertical-align: baseline;
+    position: relative;
+    top: -0.4em;
+
+}
+.footnote-tgt {
+    margin-left:-1.5em;
+    padding-right:.5em;    
+}
+
+.footnote-links {line-hieght: 18px;float:right;}
+.footnote-icon {padding-left:.5em; font-size:18px;}
+
+.bibl li{line-height: 1.5em;padding-bottom:.5em;}
+.bibl-links {padding:.25em; width:25px;}
+.anchor { 
+    position: relative; 
+    top:-75px !important;
+    visibility: hidden; 
+    }
+    
+.anchor:before {
+  content:"";
+  float: left;
+  height: 0px;
+}
+
+.heading-inline {
+	font-weight: bold;
+}
+
+/* styles for names */
+.placeName {
+ font-weight: bold;
+}
+
+/* Subject headings */
+.sh {margin-right:.5em; margin-bottom: .5em; line-height:14px; font-weight:normal;}
+.sh-search {text-decoration:none; color:white; margin-left:.5em;}
+.sh .placeName, .sh .pers-label {font-weight:normal; }
+
+.sh .footnote-refs{display:none;}
+
+/* styles for languages and scripts */
+:lang(en) {
+	font-family: arial, sans-serif;
+}
+
+:lang(syr),:lang(syc) {
+ font-family: "EstrangeloEdessa", "Estrangelo Edessa", Verdana, Arial, Helvetica, sans-serif;
+  /*font-size:large;*/
+  font-size:1.25em; 
+  line-height:1em;
+  
+}
+
+:lang(syr-Syrj), :lang(syc-Syrj) {
+ font-family: "SertoBatnan", "Serto Batnan", Verdana, Arial, Helvetica, sans-serif;
+  font-size:1.25em; 
+  line-height:1em;
+ 
+}
+
+:lang(syr-Syre), :lang(syc-Syre) {
+ font-family: "EastSyriacAdiabene", "East Syriac Adiabene", Verdana, Arial, Helvetica, sans-serif;
+ font-size:1.25em; 
+ line-height:1em;
+
+}
+
+:lang(ar) {
+ font-family: arial, sans-serif;
+ font-size:1.25em; 
+ line-height:1em;
+ 
+}
 
 
 /* link icon styles (inline) */
